continuando os estudos

--- a/Primeiros Comandos.ipynb
+++ b/Primeiros Comandos.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "081ae496",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
     "print (lucro)\n",
     "lucro = vendas_tot - custo\n",
     "\n",
-    "print (lucro)(\"apenas apos executar a função lucro novamente que ela sera atualizada com o novo custo informado\")"
+    "print (lucro) # apenas apos executar a função lucro novamente que ela sera atualizada com o novo custo informado"
    ]
   },
   {
@@ -215,22 +215,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "85edcb4b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'float'>\n",
-      "<class 'str'>\n",
-      "<class 'str'>\n",
-      "<class 'bool'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "variavel = 100\n",
     "print (type(variavel))\n",
@@ -249,40 +237,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "aeaa14b4",
+   "cell_type": "raw",
+   "id": "a29a7543",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'cuidados importantes!! nao usar como nome de variavel as varaveis já pre existentes do python'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "(\"cuidados importantes!! nao usar como nome de variavel as varaveis já pre existentes do python\")"
+    "# cuidados importantes!! nao usar como nome de variavel as varaveis já pre existentes do python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "51cd6b76",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A meta é de 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#variavel = 100\n",
     "#\n",
@@ -304,19 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "eeaa0769",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A meta da loja 1 é de: 110A meta da loja 2 é de: 120A meta da loja 3 é de: 90\n",
-      "A média das metas foi de 106.66666666666667\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loja1 = 110\n",
     "loja2 = 120\n",
@@ -330,19 +288,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b8c0435a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2864426379.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [23]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print (\"A média das metas foi de {}\".format(.0media))\u001b[0m\n\u001b[1;37m                                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loja1 = 110\n",
     "loja2 = 120\n",
