--- a/Exercícios.ipynb
+++ b/Exercícios.ipynb
@@ -143,8 +143,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "8418e749",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['jan', 'fev', 'mar', 'abr', 'mai', 'jun', 'jul', 'ago', 'set', 'out', 'nov', 'dez']\n",
+      "12\n",
+      "6\n",
+      "6\n",
+      "[80000, 90000, 100000, 90000, 80000, 90000, 100000, 90000, 85000, 95000, 105000, 115000]\n",
+      "12\n",
+      "O melhor mês foi dez com 115,000.00 reais em vendas\n",
+      "O pior mês foi jan com 80,000.00 reais em vendas\n",
+      "O faturamento total foi de: R$ 1,120,000.00\n",
+      "O melhor mês representou 10.27% das vendas do ano!\n"
+     ]
+    }
+   ],
+   "source": [
+    "meses = [\"jan\", \"fev\", \"mar\", \"abr\", \"mai\", \"jun\", \"jul\", \"ago\",\"set\",\"out\", \"nov\", \"dez\"]\n",
+    "print(meses)\n",
+    "print (len(meses))\n",
+    "\n",
+    "vendas_1sem = [80000, 90000, 100000, 90000, 80000, 90000]\n",
+    "vendas_2sem = [100000, 90000, 85000, 95000, 105000, 115000]\n",
+    "print (len(vendas_1sem))\n",
+    "print (len(vendas_2sem))\n",
+    "vendas_ano = vendas_1sem + vendas_2sem\n",
+    "print(vendas_ano)\n",
+    "print (len(vendas_ano))\n",
+    "\n",
+    "print(\"O melhor mês foi {} com {:,.2f} reais em vendas\".format(meses[vendas_ano.index(max(vendas_ano))], max(vendas_ano)))\n",
+    "print(\"O pior mês foi {} com {:,.2f} reais em vendas\".format(meses[vendas_ano.index(min(vendas_ano))], min(vendas_ano)))\n",
+    "\n",
+    "# para somar todos os valores de uma lista podemos utilizar a função sum(lista)\n",
+    "\n",
+    "vendas_tot = sum(vendas_ano)\n",
+    "print(\"O faturamento total foi de: R$ {:,.2f}\".format(vendas_tot))\n",
+    "\n",
+    "percentual = max(vendas_ano) / vendas_tot\n",
+    "print(\"O melhor mês representou {:.2%} das vendas do ano!\".format(percentual))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cca14eb",
    "metadata": {},
    "outputs": [],
    "source": []
