finalizado estudo inicial de for entrando em while

--- a/Estrutura de repetição FOR.ipynb
+++ b/Estrutura de repetição FOR.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "id": "a3899a89",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1983423c",
+   "id": "a777ea9e",
    "metadata": {},
    "source": [
     "## combinando o for com if"
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "cddb3da7",
+   "id": "020ad8d7",
    "metadata": {},
    "source": [
     "for item in lista:\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a0b3dd4a",
+   "id": "b4bec1c4",
    "metadata": {},
    "outputs": [
     {
@@ -246,13 +246,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "62701d1a",
+   "execution_count": 45,
+   "id": "5b8617f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ou as vezes podemos usar o for direto na lista mas pegando tambem o "
+    "# ou as vezes podemos usar o for direto na lista mas pegando tambem o indice para poder relacionar mais listas por exemplo \n",
+    "#para isso usaremos o .enumerate() \n",
+    "# usar apenas quando necessario por tornar o codico mais lento.\n"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "9932fe19",
+   "metadata": {},
+   "source": [
+    "for i, venda in enumerate(vendas):\n",
+    "    faca algo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "6360f865",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 foi a venda de numero 0\n",
+      "15 foi a venda de numero 1\n",
+      "51 foi a venda de numero 2\n",
+      "84 foi a venda de numero 3\n",
+      "74 foi a venda de numero 4\n",
+      "51 foi a venda de numero 5\n",
+      "41 foi a venda de numero 6\n",
+      "95 foi a venda de numero 7\n",
+      "62 foi a venda de numero 8\n",
+      "31 foi a venda de numero 9\n",
+      "52 foi a venda de numero 10\n",
+      "84 foi a venda de numero 11\n",
+      "84 foi a venda de numero 12\n",
+      "75 foi a venda de numero 13\n",
+      "74 foi a venda de numero 14\n",
+      "91 foi a venda de numero 15\n",
+      "15 foi a venda de numero 16\n",
+      "18 foi a venda de numero 17\n",
+      "14 foi a venda de numero 18\n",
+      "16 foi a venda de numero 19\n",
+      "18 foi a venda de numero 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "vendas = [10, 15, 51, 84, 74, 51, 41, 95, 62, 31, 52, 84, 84, 75, 74, 91, 15, 18, 14, 16, 18]\n",
+    "for i, venda in enumerate(vendas):\n",
+    "    print(\"{} foi a venda de numero {}\".format(venda,i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "3de55fe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 unidades vendidas de gasp13, gerando uma venda de 3600 reais.\n",
+      "1 unidades vendidas de gasp45, gerando uma venda de 500 reais.\n",
+      "8 unidades vendidas de agua22, gerando uma venda de 40 reais.\n",
+      "10 unidades vendidas de agua23, gerando uma venda de 50 reais.\n",
+      "12 unidades vendidas de agua24, gerando uma venda de 60 reais.\n",
+      "6 unidades vendidas de agua25, gerando uma venda de 30 reais.\n",
+      "4,280.00 foi o faturamento total do dia!\n",
+      "30 unidades vendidas de gasp13, gerando uma venda de 3600 reais.\n",
+      "1 unidades vendidas de gasp45, gerando uma venda de 500 reais.\n",
+      "8 unidades vendidas de agua22, gerando uma venda de 40 reais.\n",
+      "10 unidades vendidas de agua23, gerando uma venda de 50 reais.\n",
+      "12 unidades vendidas de agua24, gerando uma venda de 60 reais.\n",
+      "6 unidades vendidas de agua25, gerando uma venda de 30 reais.\n",
+      "4,280.00 foi o faturamento total do dia!\n"
+     ]
+    }
+   ],
+   "source": [
+    "produtos = [\"gasp13\",\"gasp45\",\"agua22\",\"agua23\", \"agua24\",\"agua25\"]\n",
+    "vendas = [30,1,8,10,12,6]\n",
+    "valor = [120,500,5,5,5,5]\n",
+    "vendas_tot = 0\n",
+    "\n",
+    "for i in range(len(produtos)):\n",
+    "    vendas_tot = vendas_tot + (valor[i]*vendas[i]) #usando o for para sumor o total, mas poderia ser pela função sum()\n",
+    "    print(\"{} unidades vendidas de {}, gerando uma venda de {} reais.\".format(vendas[i],produtos[i],(vendas[i]*valor[i])))\n",
+    "print(\"{:,.2f} foi o faturamento total do dia!\".format(vendas_tot))\n",
+    "\n",
+    "#repetindo utilizando o enumerate\n",
+    "\n",
+    "produtos = [\"gasp13\",\"gasp45\",\"agua22\",\"agua23\", \"agua24\",\"agua25\"]\n",
+    "vendas = [30,1,8,10,12,6]\n",
+    "valor = [120,500,5,5,5,5]\n",
+    "vendas_tot = 0\n",
+    "\n",
+    "for i, produto in enumerate(produtos):\n",
+    "    vendas_tot += valor[i]*vendas[i]\n",
+    "    print(\"{} unidades vendidas de {}, gerando uma venda de {} reais.\".format(vendas[i],produto,(vendas[i]*valor[i])))\n",
+    "print(\"{:,.2f} foi o faturamento total do dia!\".format(vendas_tot))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3e45ca9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
